# Kontext

./: .dockerignore  .gitconfig  .gitignore  .mintignore  .vercelignore  AGENTS.md  CODE_OF_CONDUCT.md  CONCEPT.md  CONTRIBUTING.md  DEPRECATED.md  Dockerfile  EVALS.md  Makefile  PHASES.md  PLAN.md  PROJECT  README.md  ROADMAP.md  SECURITY.md  SPEC.md  SUPPORT.md  TUI_PLAN.md  docs-nav.json  docs.json  go.mod  go.sum  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  (+2 more)
cmd/: main.go  main_test.go
demo/: SCRIPT.md
deploy/: install.yaml
docs/: evals.md  index.md  operations.md  quickstart.md  releases.md  resources.md  runtimes.md  scheduled-workload.md  service-workload.md  task-workload.md  when-not-to-use-agents.md
docs-site/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts
hack/: boilerplate.go.txt
runtimes/python-anthropic/: Dockerfile  README.md  pyproject.toml
runtimes/python-anthropic/src/kontext_runtime/: runner.py
scripts/: apply-example.sh  collect-kind-diagnostics.sh  deploy-go.sh  e2e-kind-network-policy.sh  e2e-kind-playwright-mcp.sh  e2e-kind-scheduled.sh  e2e-kind-task.sh  e2e-kind-webhook.sh  e2e-kind.sh  eval-kind.sh  install-go-kind.sh  install-kind.sh  provider-acceptance-kind.sh  render-release-manifest.sh  test-release-identity.sh  test-shell-common.sh  verify-release-install.sh
website/: 404.html  README.md  index.html  robots.txt  sitemap.xml  styles.css
(+263 files in other folders)
