[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kontext"
version = "0.1.0"
description = "Kubernetes-native agent launcher and TUI demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.49.0",
  "kopf>=1.37.4",
  "kubernetes>=31.0.0",
  "textual>=0.89.1",
  "PyYAML>=6.0.2",
]

[project.scripts]
kontext = "kontext_tui.cli:main"
kontext-controller = "kontext_operator.controller:main"
kontext-fake-runner = "kontext_runtime.fake_runner:main"
kontext-runner = "kontext_runtime.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kontext_tui", "src/kontext_operator", "src/kontext_runtime"]
