[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kontext-runtime-anthropic"
version = "0.1.0"
description = "Kontext runtime image runner backed by the Anthropic API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.49.0",
]

[project.scripts]
kontext-runner = "kontext_runtime.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kontext_runtime"]
